// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragDrop defined dropTypes is reflected in the className 1`] = `
<div
  class="lnsDragDrop__container"
  data-test-subj="dragAndDropContainer"
>
  <button
    class="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isDropTarget"
    data-test-subj="dragAndDrop"
  >
    Hello!
  </button>
</div>
`;

exports[`DragDrop items that has dropTypes=undefined get special styling when another item is dragged 1`] = `
<SingleDropInner
  className="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isNotDroppable"
  data-test-subj="lnsDragDrop"
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
>
  <button
    className="lnsDragDrop lnsDragDrop-isDroppable lnsDragDrop-isNotDroppable"
    data-test-subj="lnsDragDrop"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Hello!
  </button>
</SingleDropInner>
`;

exports[`DragDrop renders if nothing is being dragged 1`] = `
<div
  class=""
  data-test-subj="dragAndDrop_draggable-hello"
>
  <button
    aria-describedby="dragAndDrop-keyboardInstructions"
    aria-label="hello"
    class="lnsDragDrop__keyboardHandler emotion-euiScreenReaderOnly"
    data-test-subj="dragAndDrop-keyboardHandler"
  />
  <button
    class="lnsDragDrop lnsDragDrop-isDraggable"
    data-test-subj="dragAndDrop"
    draggable="true"
  >
    Hello!
  </button>
</div>
`;
